--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -11,10 +11,10 @@ jobs:
       - uses: actions/checkout@v1
 
       - name: Validate composer.json and composer.lock
-        run: composer validate --working-dir html
+        run: composer validate
 
       - name: Install dependencies
-        run: composer install --working-dir html --prefer-dist --no-progress --no-suggest --ignore-platform-reqs
+        run: composer install --prefer-dist --no-progress --no-suggest --ignore-platform-reqs
 
       - name: Moving build to artifacts directory
         env:
