--- a/.github/workflows/on-pull-request.yml
+++ b/.github/workflows/on-pull-request.yml
@@ -21,6 +21,7 @@ jobs:
           TOKEN: ${{ secrets.GITHUB_TOKEN }}
           PR_COMMENT_HREF: ${{ github.event.pull_request._links.comments.href }}
           PR_SHA: ${{ github.event.after }}
+          PR_BASE_SHA: ${{ github.event.pull_request.base.sha }}
         run: bash build.sh
 
       - name: Dump GitHub context
